# xrif

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  fileformat.md  readme.md
doc/: groups.h  overview.h  theme_license.txt  xrif.dox
doc/doxygen-awesome-css/: doxygen-awesome.css
src/: .CMakeLists.txt~  CMakeLists.txt  bit_to_position.inc  bitshift_and_nibbles.inc  set_bits.inc  xrif.c  xrif.h  xrif_compress_fastlz.c  xrif_compress_lz4.c  xrif_compress_lz4hc.c  xrif_compress_zlib.c  xrif_compress_zstd.c  xrif_difference_bayer.c  xrif_difference_first.c  xrif_difference_pixel.c  xrif_difference_pixel0.c  xrif_difference_pixel1.c  xrif_difference_pixelL.c  xrif_difference_previous.c  xrif_difference_previous0.c  xrif_reorder_bitpack.c  xrif_reorder_bytepack.c  xrif_reorder_bytepack_renibble.c
src/lupgen/: README.md  bit_to_position_lupgen.c  bitshift_and_nibbles_lupgen.c  set_bits_lupgen.c
tests/: .CMakeLists.txt~  .xrif_test_init.c~  CMakeLists.txt  incutils.h  randutils.h  testloop.c  xrif_test_ascii.c  xrif_test_difference_first_whitenoise.c  xrif_test_difference_pixel0_whitenoise.c  xrif_test_difference_pixel1_whitenoise.c  xrif_test_difference_pixelL_whitenoise.c  xrif_test_difference_pixel_whitenoise.c  xrif_test_difference_previous0_whitenoise.c  xrif_test_difference_previous_whitenoise.c  xrif_test_increment.c  xrif_test_init.c  xrif_test_whitenoise.c
