#######################################################################
#
#                            Tests
#
#######################################################################
add_executable(xrif_test_init xrif_test_init.c $<TARGET_OBJECTS:objlib>)
target_compile_options(xrif_test_init PUBLIC)

add_executable(xrif_test_increment xrif_test_increment.c $<TARGET_OBJECTS:objlib>)
target_compile_options(xrif_test_increment PUBLIC)

add_executable(xrif_test_whitenoise xrif_test_whitenoise.c $<TARGET_OBJECTS:objlib>)
target_compile_options(xrif_test_whitenoise PUBLIC)

add_executable(xrif_test_difference_previous_whitenoise xrif_test_difference_previous_whitenoise.c $<TARGET_OBJECTS:objlib>)
target_compile_options(xrif_test_difference_previous_whitenoise PUBLIC)

add_executable(xrif_test_difference_first_whitenoise xrif_test_difference_first_whitenoise.c $<TARGET_OBJECTS:objlib>)
target_compile_options(xrif_test_difference_first_whitenoise PUBLIC)

add_executable(xrif_test_difference_pixel0_whitenoise xrif_test_difference_pixel0_whitenoise.c $<TARGET_OBJECTS:objlib>)
target_compile_options(xrif_test_difference_pixel0_whitenoise PUBLIC)

add_executable(xrif_test_difference_pixel1_whitenoise xrif_test_difference_pixel1_whitenoise.c $<TARGET_OBJECTS:objlib>)
target_compile_options(xrif_test_difference_pixel1_whitenoise PUBLIC)

add_executable(xrif_test_ascii xrif_test_ascii.c $<TARGET_OBJECTS:objlib>)
target_compile_options(xrif_test_ascii PUBLIC)

include_directories(${SUBUNIT_INCLUDE_DIRS})
link_directories(${SUBUNIT_LIBRARY_DIRS})
target_link_libraries(xrif_test_init ${SUBUNIT_LIBRARIES})
target_link_libraries(xrif_test_increment ${SUBUNIT_LIBRARIES})
target_link_libraries(xrif_test_whitenoise ${SUBUNIT_LIBRARIES})
target_link_libraries(xrif_test_difference_previous_whitenoise ${SUBUNIT_LIBRARIES})
target_link_libraries(xrif_test_difference_first_whitenoise ${SUBUNIT_LIBRARIES})
target_link_libraries(xrif_test_difference_pixel0_whitenoise ${SUBUNIT_LIBRARIES})
target_link_libraries(xrif_test_difference_pixel1_whitenoise ${SUBUNIT_LIBRARIES})
target_link_libraries(xrif_test_ascii ${SUBUNIT_LIBRARIES})

include_directories(${CHECK_INCLUDE_DIRS})
link_directories(${CHECK_LIBRARY_DIRS})
target_link_libraries(xrif_test_init ${CHECK_LIBRARIES})
target_link_libraries(xrif_test_increment ${CHECK_LIBRARIES})
target_link_libraries(xrif_test_whitenoise ${CHECK_LIBRARIES})
target_link_libraries(xrif_test_difference_previous_whitenoise ${CHECK_LIBRARIES})
target_link_libraries(xrif_test_difference_first_whitenoise ${CHECK_LIBRARIES})
target_link_libraries(xrif_test_difference_pixel0_whitenoise ${CHECK_LIBRARIES})
target_link_libraries(xrif_test_difference_pixel1_whitenoise ${CHECK_LIBRARIES})
target_link_libraries(xrif_test_ascii ${CHECK_LIBRARIES})

find_library(LIBRT rt)
if(LIBRT_FOUND)
message("Explicitly requiring -lrt")
endif()

find_library(LIBM m)
if(LIBM_FOUND)
message("Explicitly requiring -lm")
endif()

find_library(LIBPTHREAD pthread)
if(LIBPTHREAD_FOUND)
message("Explicitly requiring -lpthread")
endif()

find_library(LIBZ z)
if(LIBZ_FOUND)
message("Explicitly requiring -lz")
endif()

find_library(LIBZSTD zstd)
if(LIBZSTD_FOUND)
message("Explicitly requiring -lzstd")
endif()

if(LIBRT)
    target_link_libraries(xrif_test_init ${LIBRT})
    target_link_libraries(xrif_test_increment ${LIBRT})
    target_link_libraries(xrif_test_whitenoise ${LIBRT})
    target_link_libraries(xrif_test_difference_previous_whitenoise ${LIBRT})
    target_link_libraries(xrif_test_difference_first_whitenoise ${LIBRT})
    target_link_libraries(xrif_test_difference_pixel0_whitenoise ${LIBRT})
    target_link_libraries(xrif_test_difference_pixel1_whitenoise ${LIBRT})
    target_link_libraries(xrif_test_ascii ${LIBRT})
endif()
if(LIBM)
    target_link_libraries(xrif_test_init ${LIBM})
    target_link_libraries(xrif_test_increment ${LIBM})
    target_link_libraries(xrif_test_whitenoise ${LIBM})
    target_link_libraries(xrif_test_difference_previous_whitenoise ${LIBM})
    target_link_libraries(xrif_test_difference_first_whitenoise ${LIBM})
    target_link_libraries(xrif_test_difference_pixel0_whitenoise ${LIBM})
    target_link_libraries(xrif_test_difference_pixel1_whitenoise ${LIBM})
    target_link_libraries(xrif_test_ascii ${LIBM})
endif()
if(LIBPTHREAD)
    target_link_libraries(xrif_test_init ${LIBPTHREAD})
    target_link_libraries(xrif_test_increment ${LIBPTHREAD})
    target_link_libraries(xrif_test_whitenoise ${LIBPTHREAD})
    target_link_libraries(xrif_test_difference_previous_whitenoise ${LIBPTHREAD})
    target_link_libraries(xrif_test_difference_first_whitenoise ${LIBPTHREAD})
    target_link_libraries(xrif_test_difference_pixel0_whitenoise ${LIBPTHREAD})
    target_link_libraries(xrif_test_difference_pixel1_whitenoise ${LIBPTHREAD})
    target_link_libraries(xrif_test_ascii ${LIBPTHREAD})
endif()
if(LIBZ)
    target_link_libraries(xrif_test_init ${LIBZ})
    target_link_libraries(xrif_test_increment ${LIBZ})
    target_link_libraries(xrif_test_whitenoise ${LIBZ})
    target_link_libraries(xrif_test_difference_previous_whitenoise ${LIBZ})
    target_link_libraries(xrif_test_difference_first_whitenoise ${LIBZ})
    target_link_libraries(xrif_test_difference_pixel0_whitenoise ${LIBZ})
    target_link_libraries(xrif_test_difference_pixel1_whitenoise ${LIBZ})
    target_link_libraries(xrif_test_ascii ${LIBZ})
endif()
if(LIBZSTD)
    target_link_libraries(xrif_test_init ${LIBZSTD})
    target_link_libraries(xrif_test_increment ${LIBZSTD})
    target_link_libraries(xrif_test_whitenoise ${LIBZSTD})
    target_link_libraries(xrif_test_difference_previous_whitenoise ${LIBZSTD})
    target_link_libraries(xrif_test_difference_first_whitenoise ${LIBZSTD})
    target_link_libraries(xrif_test_difference_pixel0_whitenoise ${LIBZSTD})
    target_link_libraries(xrif_test_difference_pixel1_whitenoise ${LIBZSTD})
    target_link_libraries(xrif_test_ascii ${LIBZSTD})
endif()